--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -104,6 +104,11 @@
     height: 35px;
 }
 
+#paginationHolder {
+    margin: 0 auto;
+    width: max-content;
+}
+
 .pagination > .active > a {
     z-index: 0;
 }
