Pagination v 0.5: Added contact per page section: rerender page due to dropdown selection.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -121,3 +121,8 @@
     border: 1px solid black;
     background-color: green;
 }
+
+#contactPerPageHolder {
+    margin: 0 auto;
+    width: max-content;
+}
