--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,5 @@
 
-#main {
+.main {
     width: 800px;
     margin: 0 auto;
     padding: 10px;
@@ -104,7 +104,7 @@
     height: 35px;
 }
 
-#paginationHolder {
+.paginationHolder {
     margin: 0 auto;
     width: max-content;
 }
@@ -122,7 +122,7 @@
     background-color: green;
 }
 
-#contactPerPageHolder {
+.contactPerPageHolder {
     margin: 0 auto;
     width: max-content;
 }
