Refactoring: 1) Added Backbone Validation plugin. 2) Change of spinner invocation and usage (now it is showed on every re-rendering of contact list). 3) Performance upgrades.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -73,7 +73,7 @@
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
 
-.addUserHolder {
+.header {
     margin: 0 auto 20px;
     width: 44%;
     padding-bottom: 10px;
