New pagination: pages appearing gradually after clicking next page or page number.

--- a/src/main/resources/static/js/templates/pagination.dust
+++ b/src/main/resources/static/js/templates/pagination.dust
@@ -9,7 +9,11 @@
         </li>
         {#pages}
             <li>
+                {@ne key=. value=".."}
                 <a href="#page{.}">{.}</a>
+                {:else}
+                <a>..</a>
+                {/ne}
             </li>
         {/pages}
         <li>
