1. Add Security functional 2. Add login and register pages. 3. Modify existing functionality with new data.

--- a/src/main/resources/static/js/templates/contact.dust
+++ b/src/main/resources/static/js/templates/contact.dust
@@ -1,5 +1,5 @@
 
-<div class="user"><img class="img" src="images/{sex}.png"/></div>
+<div class="user"><img class="img" src="../images/{sex}.png"/></div>
 <div class="user">{#firstName}{.}{/firstName}</div>
 <div class="user">{#lastName}{.}{/lastName}</div><br/>
 <div class="buttons">
