--- a/src/main/resources/static/js/templates/addContact.dust
+++ b/src/main/resources/static/js/templates/addContact.dust
@@ -46,8 +46,25 @@
                 </div>
                 <div class="sex_error" style="color:red;"></div>
 
+                <div class="form-group form-field-header">Email*</div>
+                <div class="form-group">
+                    <input type="text" class="form-control" maxlength="50" style="width: 300px;"
+                           tabindex="1" placeholder="Email" required="required"
+                           name="email" id="email" value="{email}"/>
+                    <span class="help-block hidden"></span>
+                </div>
+                <div class="email_error" style="color:red;"></div>
 
-
+                {?isAdd}
+                <div class="form-group form-field-header">Password*</div>
+                <div class="form-group">
+                    <input type="text" class="form-control" maxlength="50" style="width: 300px;"
+                           tabindex="1" placeholder="Password" required="required"
+                           name="password" id="password"/>
+                    <span class="help-block hidden"></span>
+                </div>
+                <div class="password_error" style="color:red;"></div>
+                {/isAdd}
 
                 <input type="submit" id="submitButton" class="btn btn-success" value="Submit" name="OK"
                        style="margin-right: 10px;"/>
