--- a/src/main/resources/static/js/templates/addContact.dust
+++ b/src/main/resources/static/js/templates/addContact.dust
@@ -58,12 +58,21 @@
                 {?isAdd}
                 <div class="form-group form-field-header">Password*</div>
                 <div class="form-group">
-                    <input type="text" class="form-control" maxlength="50" style="width: 300px;"
+                    <input type="password" class="form-control" maxlength="50" style="width: 300px;"
                            tabindex="1" placeholder="Password" required="required"
                            name="password" id="password"/>
                     <span class="help-block hidden"></span>
                 </div>
                 <div class="password_error" style="color:red;"></div>
+
+                <div class="form-group form-field-header">Repeat  Password*</div>
+                <div class="form-group">
+                    <input type="password" class="form-control" maxlength="50" style="width: 300px;"
+                           tabindex="1" placeholder="Password" required="required"
+                           name="repeatPassword" id="repeatPassword"/>
+                    <span class="help-block hidden"></span>
+                </div>
+                <div class="repeatPassword_error" style="color:red;"></div>
                 {/isAdd}
 
                 <input type="submit" id="submitButton" class="btn btn-success" value="Submit" name="OK"
