--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,10 @@
+.float_left {
+    float: left;
+}
+
+.float_right {
+    float: right;
+}
 
 .main {
     width: 800px;
@@ -5,7 +12,7 @@
     padding: 10px;
 }
 
-.contactList {
+.contactList_tabs {
     background-color: cornflowerblue;
     list-style: none;
     float: left;
@@ -16,10 +23,31 @@
     border: 1px solid black;
 }
 
+.contactList_list {
+    /*border-bottom: 1px solid #eaeaea;*/
+    /*border-right: 1px solid #eaeaea;*/
+    background-color: cornflowerblue;
+    margin: .46154em .38462em 0 0;
+    padding: 0 0 1.84615em;
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 62px;
+}
+
 .user, .buttons {
     font-family: Verdana;
     font-size: medium;
     text-align: center;
+}
+
+.userList, .buttonsList {
+    font-family: Verdana;
+    font-size: medium;
+    text-align: center;
+}
+
+.userList_name, .buttonsList  {
+    margin-top: 10px;
 }
 
 .userInfo {
@@ -122,7 +150,24 @@
     background-color: green;
 }
 
-.contactPerPageHolder {
+.contactPerPageHolder, .selectViewHolder {
     margin: 0 auto;
-    width: max-content;
+    width: 50%;
+}
+
+.selectViewHolder {
+    float: right;
+}
+
+.selectViewHolder > div {
+    padding-left: 40%;
+}
+.selectViewHolder > div > a {
+    padding: 10px;
+}
+
+#listtabs {
+    width: 30px;
+    height: 30px;
+
 }
