added user pages and isAdmin check. Refactoring of back-end, added constants and change structure.

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ACCESS DENIED</title>
+    <title>ERROR</title>
 </head>
 <body>
-ACCESS DENIED!!!!!!!!!
+ERROR!!!!!!!!
 </body>
 </html>
