--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -183,3 +183,21 @@ body {
     height: 30px;
 
 }
+
+.footer {
+    width: 100%;
+    background-color: #222;
+    color: white;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.user_greeting {
+    cursor: auto;
+    font-weight: bold;
+    color: white;
+}
+
+.cursor_pointer {
+    cursor: pointer;
+}
