--- a/src/main/resources/static/js/authorised/templates/header/header.dust
+++ b/src/main/resources/static/js/authorised/templates/header/header.dust
@@ -1,7 +1,8 @@
 
-
 <div class="header">
+    {?isAdmin}
     <a href="#add" id="add"><input type="button" class="btn btn-primary" value="Add User" /></a>
+    {/isAdmin}
     <div class="searchHolder">
         <input type="text" placeholder="search..." id="search" class="form-control input-sm"/>
         <input type="button" value="X" id="reset" class="btn btn-success"/>
