--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header-css">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <script data-main="../js/main" th:src="@{/js/bower_components/requirejs/require.js}"></script>
+        <script data-main="../js/unauthorised/main" th:src="@{/js/bower_components/requirejs/require.js}"></script>
         <script th:src="@{/js/utils/menuSwitch.js}"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
@@ -12,20 +12,13 @@
     <div class="navbar navbar-inverse ">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand">Contact List</a>
+                <a class="navbar-brand" href="/">Contact List</a>
             </div>
             <ul class="nav navbar-nav">
-                <li ><a class="tablinks" href="#home" onclick="menuSwitch(event, 'content_home')">Home</a></li>
-                <li th:if="${admin}">
-                    <a class="tablinks" href="#admin" onclick="menuSwitch(event, 'content_admin')">Admin</a>
-                </li>
-                <li th:unless="${admin}">
-                    <a class="tablinks" href="#user" onclick="menuSwitch(event, 'content_user')">User</a>
-                </li>
+                <li ><a class="tablinks" href="#store" onclick="menuSwitch(event, 'content_books')">Books</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a><span class="glyphicon glyphicon-user user_greeting" th:utext="${userName}"></span></a></li>
-                <li class="cursor_pointer"><a onclick="document.forms['logoutForm'].submit()"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+                <li class="cursor_pointer"><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Sign in</a></li>
             </ul>
         </div>
     </div>
