--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 
     <div>
         <a href="/login">Go to Login Page</a>
+        <p th:text="#{hibernate.user.email.message}"></p>
+
     </div>
 
     <div th:replace="fragments/footer :: footer"/></div>
