--- a/src/main/resources/static/js/authorised/templates/contacts/contactView.dust
+++ b/src/main/resources/static/js/authorised/templates/contacts/contactView.dust
@@ -1,4 +1,5 @@
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<p th:text="#{hibernate.user.email.message}"></p>
 <div class="user"><img class="img" src="../images/{sex}.png"/></div>
 <div class="user">{#firstName}{.}{/firstName}</div>
 <div class="user">{#lastName}{.}{/lastName}</div><br/>
@@ -15,3 +16,4 @@
 </div>
 
 <input type="hidden" value="{#id}{.}{/id}" id="modelId">
+</html>
