--- a/src/main/resources/templates/fragments/authorisedHeader.html
+++ b/src/main/resources/templates/fragments/authorisedHeader.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/admin.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
 </head>
 <body>
 <div th:fragment="header">
