--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,10 +2,10 @@
 <head>
 </head>
 <body>
-<div th:fragment="footer">
+<div th:fragment="footer" class="footer">
 
     <footer>
-    <div class="footer">
+    <div>
         <p>Footer</p>
     </div>
     </footer>
