--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,14 +3,13 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>Registration Form</title>
+	<div th:include="fragments/header :: header-css"/></div>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" th:src="@{/js/utils/password_validate.js}"></script>
 </head>
 <body>
-	<form th:action="@{/}" method="get">
+	<div th:include="fragments/header :: header"/></div>
+	<form th:action="@{/login}" method="get">
 		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
 	</form>	
 	
@@ -97,6 +96,6 @@
 			</div>
 		</div>
 	</div>
-
+	<div th:replace="fragments/footer :: footer"/></div>
 </body>
 </html>
