fix several issues, added new views and templates.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,9 +6,9 @@
 <body>
     <div th:include="fragments/header :: header"/></div>
 
-    <div class="content_home tabcontent">
-        <h1 align="center" th:text="#{index.page.welcome}"></h1>
-    </div>
+    <!--<div class="content_home tabcontent">-->
+        <!--<h1 align="center" th:text="#{index.page.welcome}"></h1>-->
+    <!--</div>-->
 
     <div th:replace="fragments/footer :: footer"/></div>
 </body>
