--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,6 +3,12 @@ body {
     margin: 0 auto;
 }
 
+.main {
+    width: 800px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
 .icon-small
 {
     height:18px;
@@ -24,6 +30,7 @@ body {
     color: white;
     text-align: center;
     border-radius: 4px;
+    float: left;
 }
 
 .user_greeting {
