--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,15 +3,12 @@
 	xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<div th:include="fragments/header :: header-css"/></div>
+	<div th:include="fragments/loginHeader :: header-css"/></div>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
 </head>
 
 <body>
-	<div th:include="fragments/header :: header"/></div>
-	<form th:action="@{/registration}" method="get">
-		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
-	</form>	
+	<div th:include="fragments/loginHeader :: header"/></div>
 	
 	<div class="container">
 		<img th:src="@{/images/login.jpg}" class="img-responsive center-block" width="300" height="300" alt="Logo" />
