--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,15 +3,12 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>Registration Form</title>
-	<div th:include="fragments/header :: header-css"/></div>
+	<div th:include="fragments/loginHeader :: header-css"/></div>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />
 	<script type="text/javascript" th:src="@{/js/utils/password_validate.js}"></script>
 </head>
 <body>
-	<div th:include="fragments/header :: header"/></div>
-	<form th:action="@{/login}" method="get">
-		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
-	</form>	
+	<div th:include="fragments/loginHeader :: header"/></div>
 	
 	<div class="container">
 		<div class="row">
