--- a/src/main/resources/static/js/unauthorised/templates/header/header.dust
+++ b/src/main/resources/static/js/unauthorised/templates/header/header.dust
@@ -1,4 +1,9 @@
 
-<div class="header">
-
+<div class="menu">
+    <ul class="nav nav-pills nav-stacked catalog_tab">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Menu 1</a></li>
+        <li><a href="#">Menu 2</a></li>
+        <li><a href="#">Menu 3</a></li>
+    </ul>
 </div>
