--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -11,19 +11,6 @@
     display: block;
 }
 
-
-
-.contactList_list {
-    /*border-bottom: 1px solid #eaeaea;*/
-    /*border-right: 1px solid #eaeaea;*/
-    background-color: cornflowerblue;
-    margin: .46154em .38462em 0 0;
-    padding: 0 0 1.84615em;
-    border: 1px solid black;
-    border-radius: 5px;
-    height: 62px;
-}
-
 .user, .buttons {
     font-family: Verdana;
     font-size: medium;
@@ -93,7 +80,6 @@
 
 .header {
     margin: 0 auto 20px;
-    width: 44%;
     padding-bottom: 10px;
 }
 
@@ -140,26 +126,16 @@
     background-color: green;
 }
 
-.contactPerPageHolder, .selectViewHolder {
-    width: 50%;
-}
 
-.contactPerPageHolder {
-    margin-left:17%;
-}
 
-.selectViewHolder {
-    float: right;
-}
 
-.selectViewHolder > div {
-    padding-left: 40%;
-}
-.selectViewHolder > div > a {
-    padding: 10px;
-}
 
 #listtabs {
     width: 30px;
     height: 30px;
+}
+
+.main {
+    float: left;
+    width: 100%;
 }
